@@ -31,16 +31,9 @@ public class DetailBookingSnackServiceImpl implements DetailBookingSnackService 
     private final InvoiceRepository invoiceRepository;
     private final ModelMapper mapper;
 
-    /**
-     * Create detail booking snack
-     *
-     * @param request DetailBookingSnackRequest
-     * @return DetailBookingSnackResponse
-     */
     @Override
     public DetailBookingSnackResponse create(DetailBookingSnackRequest request) {
-        InvoiceEntity invoice = invoiceRepository.findByIdAndStatusNot(request.getInvoiceId(), InvoiceStatus.CANCELLED)
-                .orElseThrow(() -> new DataNotFoundException("Invoice not found"));
+        InvoiceEntity invoice = getPendingInvoice(request.getInvoiceId());
         SnackEntity snack = snackRepository.findByIdAndIsActive(request.getSnackId(), true)
                 .orElseThrow(() -> new DataNotFoundException("Snack not found"));
         DetailBookingSnackEntity detail = DetailBookingSnackEntity.builder()
@@ -54,13 +47,6 @@ public class DetailBookingSnackServiceImpl implements DetailBookingSnackService 
         return convert(saved);
     }
 
-    /**
-     * Update detail booking ticket
-     *
-     * @param id      id of detail booking snack
-     * @param request DetailBookingSnackRequest
-     * @return DetailBookingSnackResponse
-     */
     @Override
     @Transactional
     public DetailBookingSnackResponse update(Long id, DetailBookingSnackRequest request) {
@@ -71,17 +57,13 @@ public class DetailBookingSnackServiceImpl implements DetailBookingSnackService 
         return convert(detail);
     }
 
-    /**
-     * Create multiple details
-     *
-     * @param requests List<DetailBookingSnackRequest>
-     * @return List<DetailBookingSnackResponse>
-     */
     @Override
     public List<DetailBookingSnackResponse> createMultiple(List<DetailBookingSnackRequest> requests) {
-        if (requests.isEmpty()) return null;
+        if (requests.isEmpty()) {
+            return null;
+        }
 
-        this.clearByInvoiceId(requests.get(0).getInvoiceId());
+        clearByInvoiceId(requests.getFirst().getInvoiceId());
         List<DetailBookingSnackResponse> responses = new ArrayList<>();
         requests.forEach(request -> {
             if (request.getTotalSnack() > 0) {
@@ -93,8 +75,7 @@ public class DetailBookingSnackServiceImpl implements DetailBookingSnackService 
 
     @Override
     public void clearByInvoiceId(Long invoiceId) {
-        InvoiceEntity invoice = invoiceRepository.findByIdAndStatusNot(invoiceId, InvoiceStatus.CANCELLED)
-                .orElseThrow(() -> new DataNotFoundException("Invoice not found"));
+        InvoiceEntity invoice = getPendingInvoice(invoiceId);
         double totalMoneySnack = 0;
         for (DetailBookingSnackEntity detail : invoice.getDetailBookingSnacks()) {
             totalMoneySnack += detail.getTotalMoney();
@@ -114,38 +95,36 @@ public class DetailBookingSnackServiceImpl implements DetailBookingSnackService 
                     .totalSnack(request.getQuantity())
                     .build();
             return create(detailBookingSnackRequest);
-        } else {
-            DetailBookingSnackEntity detail = detailRepository.findById(request.getId())
-                    .orElseThrow(() -> new DataNotFoundException("Detail not found"));
-            InvoiceEntity invoice = invoiceRepository.findByIdAndStatusNot(request.getInvoiceId(), InvoiceStatus.CANCELLED)
-                    .orElseThrow(() -> new DataNotFoundException("Invoice not found"));
-            SnackEntity snack = snackRepository.findByIdAndIsActive(request.getSnackId(), true)
-                    .orElseThrow(() -> new DataNotFoundException("Snack not found"));
-            detail.setSnack(snack);
-            detail.setInvoice(invoice);
-            detail.setTotalSnack(request.getQuantity());
-            detail.setTotalMoney(detail.getTotalSnack() * detail.getSnack().getUnitPrice());
-            return convert(detailRepository.save(detail));
         }
+
+        DetailBookingSnackEntity detail = detailRepository.findById(request.getId())
+                .orElseThrow(() -> new DataNotFoundException("Detail not found"));
+        InvoiceEntity invoice = getPendingInvoice(request.getInvoiceId());
+        SnackEntity snack = snackRepository.findByIdAndIsActive(request.getSnackId(), true)
+                .orElseThrow(() -> new DataNotFoundException("Snack not found"));
+        detail.setSnack(snack);
+        detail.setInvoice(invoice);
+        detail.setTotalSnack(request.getQuantity());
+        detail.setTotalMoney(detail.getTotalSnack() * detail.getSnack().getUnitPrice());
+        return convert(detailRepository.save(detail));
     }
 
     @Override
     public List<DetailBookingSnackResponse> updateMultiple(List<DetailBookingSnackRequest> requests) {
-        if (requests.isEmpty()) return null;
-        InvoiceEntity invoice = invoiceRepository.findByIdAndStatusNot(requests.get(0).getInvoiceId(), InvoiceStatus.CANCELLED)
-                .orElseThrow(() -> new DataNotFoundException("Không tìm thấy hóa đơn"));
+        if (requests.isEmpty()) {
+            return null;
+        }
+
+        InvoiceEntity invoice = getPendingInvoice(requests.getFirst().getInvoiceId());
         List<DetailBookingSnackResponse> responses = new ArrayList<>();
         Map<String, DetailBookingSnackEntity> detailMap = new HashMap<>();
-        invoice.getDetailBookingSnacks().forEach(detail -> {
-            detailMap.put(detail.getSnack().getId() + "-" + detail.getInvoice().getId(), detail);
-        });
+        invoice.getDetailBookingSnacks().forEach(detail ->
+                detailMap.put(detail.getSnack().getId() + "-" + detail.getInvoice().getId(), detail));
 
         requests.forEach(request -> {
             String key = request.getSnackId() + "-" + request.getInvoiceId();
-//            Đã chọn combo trước đó
             if (detailMap.containsKey(key)) {
                 DetailBookingSnackEntity detail = detailMap.get(key);
-                int newTotal = request.getTotalSnack() + detail.getTotalSnack();
                 detail.setTotalSnack(request.getTotalSnack() + detail.getTotalSnack());
                 detail.setTotalMoney(detail.getTotalSnack() * detail.getSnack().getUnitPrice());
                 responses.add(convert(detailRepository.save(detail)));
@@ -171,17 +150,19 @@ public class DetailBookingSnackServiceImpl implements DetailBookingSnackService 
         return responses.isEmpty() ? null : responses;
     }
 
-
-    /**
-     * Convert DetailBookingSnackEntity to DetailBookingSnackResponse
-     *
-     * @param entity DetailBookingSnackEntity
-     * @return DetailBookingSnackResponse
-     */
     private DetailBookingSnackResponse convert(DetailBookingSnackEntity entity) {
         DetailBookingSnackResponse response = mapper.map(entity, DetailBookingSnackResponse.class);
         Double totalMoney = entity.getTotalSnack() * entity.getSnack().getUnitPrice();
         response.setTotalMoney(totalMoney);
         return response;
+    }
+
+    private InvoiceEntity getPendingInvoice(Long invoiceId) {
+        InvoiceEntity invoice = invoiceRepository.findById(invoiceId)
+                .orElseThrow(() -> new DataNotFoundException("Invoice not found"));
+        if (invoice.getStatus() != InvoiceStatus.PENDING) {
+            throw new DataNotFoundException("Invoice is not available for snack updates");
+        }
+        return invoice;
     }
 }
